--- a/amber23/Makefile.forever
+++ b/amber23/Makefile.forever
@@ -1,4 +1,5 @@
 
+
 VERILOG_FILES = \
 	a23_alu.v \
 	a23_barrel_shift.v \
@@ -16,8 +17,8 @@ VERILOG_FILES = \
 	generic_sram_byte_en.v \
 	generic_sram_line_en.v
 
-obj_dir/Va23_core : vmain.cpp $(VERILOG_FILES)
-	verilator --cc a23_core.v --exe vmain.cpp --trace --trace-underscore 
+obj_dir/Va23_core : vforever.cpp $(VERILOG_FILES)
+	verilator --cc a23_core.v --exe vforever.cpp
 	make -C obj_dir/ -f Va23_core.mk
 
 clean :
