--- a/amber23/Makefile.forever
+++ b/amber23/Makefile.forever
@@ -1,6 +1,7 @@
 
 
 VERILOG_FILES = \
+	amber_wrapper.v \
 	a23_alu.v \
 	a23_barrel_shift.v \
 	a23_coprocessor.v \
@@ -16,9 +17,9 @@ VERILOG_FILES = \
 	generic_sram_byte_en.v \
 	generic_sram_line_en.v
 
-obj_dir/Va23_core : vmain.cpp $(VERILOG_FILES)
-	verilator --cc a23_core.v --exe vmain.cpp
-	NO_VCD_TRACE=1; make -C obj_dir/ -f Va23_core.mk
+obj_dir/Vamber_wrapper : vmain.cpp $(VERILOG_FILES)
+	verilator --cc amber_wrapper.v --exe vmain.cpp
+	NO_VCD_TRACE=1; make -C obj_dir/ -f Vamber_wrapper.mk
 
 clean :
 	rm -rf obj_dir
